--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Teaching"
     url: /teaching/    
 
-  _title: "Services"
+  -title: "Services"
     url: /services/
     
   - title: "CV"
