--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/tangjianpku"
+  github           : "tangjianpku"
   google_plus      :
   keybase          :
   instagram        :
