--- a/_config.yml
+++ b/_config.yml
@@ -104,9 +104,9 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/tangjianpku"
+  twitter          : "tangjianpku"
   vine             :
-  weibo            : "https://weibo.com/1741301241/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"
+  weibo            : "1741301241/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"
   xing             :
   youtube          :
   wikipedia        :
