--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,9 @@ locale                   : "en-US"
 title                    : "Jian Tang's Homepage"
 title_separator          : "-"
 name                     : &name "Jian Tang"
-description              : &description "Assitant Professor, HEC Montreal & MILA"
+description              : &description "Assitant Professor"
+description              : &description "HEC Montreal"
+description              : &description "Montreal Institute for Learning Alogorithms (MILA)"
 url                      : https://songweiping.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Songweiping/songweiping.github.io"
