--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Dr. Jian Tang"
   avatar           : "jian.jpg"
-  bio              : "Assistant Professor, |
-                        HEC Montreal | 
+  bio              : | "Assistant Professor, 
+                        HEC Montreal,
                         Montreal Institute for Learning Alogorithms (MILA)"
   location         : "Montreal, Canada"
   employer         :
