--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Jian Tang"
   avatar           : "jian.jpg"
-  bio              : | "Assistant Professor, 
+  bio              : "Assistant Professor, 
                         HEC Montreal,
                         Montreal Institute for Learning Alogorithms (MILA)"
   location         : "Montreal, Canada"
