--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "jian.jpg"
   bio              : |
     Assistant Professor, <br>
-    HEC Montreal, <br>
+    HEC Montreal <br>
     Montreal Institute for Learning Alogorithms (MILA)
   location         : "Montreal, Canada"
   employer         :
