--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,9 @@ main:
   - title: "Projects"
     url: /projects/
 
+  - title: "Softwares"
+    url: /softwares/
+
   - title: "Talks"
     url: /talks/    
 
