change site settings

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ name                     : &name "Jian Tang"
 description              : &description "Assitant Professor"
 description              : &description "HEC Montreal"
 description              : &description "Montreal Institute for Learning Alogorithms (MILA)"
-url                      : https://songweiping.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://tangjianpku.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Songweiping/songweiping.github.io"
+repository               : "tangjianpku/tangjianpku.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
