--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,10 @@ main:
     url: /talks/    
 
   - title: "Teaching"
-    url: /teaching/    
+    url: /teaching/
+    
+  - title: "Students"
+    url: /students/
 
   - title: "Services"
     url: /services/
