--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Jiang-Hao Yu"
-  avatar           : ".jpg"
+  avatar           : "bio-photo.jpg"
   bio              : |
     Associate Professor, <br>
     Institute of Theoretical Physics <br>
