--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,9 @@ author:
   employer         :
   googlescholar    : "https://inspirehep.net/authors/1066117"
   email            : "jhyu@itp.ac.cn"
-  uri              :
+  uri              : "https://www.itp.cas.cn/"
+  inspirehep       : "inspirehep"
+  arxiv            : "arxiv"
   bitbucket        :
   codepen          :
   dribbble         :
