--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,10 @@ author:
   googlescholar    : "https://inspirehep.net/authors/1066117"
   email            : "jhyu@itp.ac.cn"
   uri              : "https://www.itp.cas.cn/"
+  itpcas           : "itpcas"
   inspirehep       : "inspirehep"
   arxiv            : "arxiv"
+  casmail          : "casmail"
   bitbucket        :
   codepen          :
   dribbble         :
