--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ author:
   googlescholar    : "https://inspirehep.net/authors/1066117"
   email            : "jhyu@itp.ac.cn"
   uri              : "https://www.itp.cas.cn/"
-  itpcas           : "itpcas"
+  itpcas           : 
   inspirehep       : "inspirehep"
   arxiv            : "arxiv"
   casmail          : "casmail"
