--- a/_config.yml
+++ b/_config.yml
@@ -90,8 +90,8 @@ author:
   employer         :
   googlescholar    : "https://inspirehep.net/authors/1066117"
   email            : "jhyu@itp.ac.cn"
-  uri              : "https://www.itp.cas.cn/"
-  itpcas           : 
+  uri              : 
+  itpcas           : "itpcas"
   inspirehep       : "inspirehep"
   arxiv            : "arxiv"
   casmail          : "casmail"
