--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@
 locale                   : "en-US"
 title                    : "Jiang-Hao Yu's Homepage"
 title_separator          : "-"
-name                     : &name "Jiang-Hao Yu 于江浩"
+name                     : &name "Jiang-Hao Yu"
+description              : &description "于江浩"
 description              : &description "Associate Professor"
 description              : &description "Institute of Theoretical Physics"
 description              : &description "Chinese Academy of Science"
