--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ locale                   : "en-US"
 title                    : "Jiang-Hao Yu's Homepage"
 title_separator          : "-"
 name                     : &name "Jiang-Hao Yu"
-description              : &description "于江浩"
 description              : &description "Associate Professor"
 description              : &description "Institute of Theoretical Physics"
 description              : &description "Chinese Academy of Science"
@@ -74,7 +73,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "custom" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          :
 
