--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "jhyu-itp"
+  github           : "yu-jianghao"
   google_plus      :
   keybase          :
   instagram        :
