--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,12 @@ locale                   : "en-US"
 title                    : "Jiang-Hao Yu's Homepage"
 title_separator          : "-"
 name                     : &name "Jiang-Hao Yu"
-description              : &description "Associate Professor"
+description              : &description "Professor"
 description              : &description "Institute of Theoretical Physics"
 description              : &description "Chinese Academy of Science"
 url                      : https://yu-jianghao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "yu-jianghao/yujiang-hao.github.io"
+repository               : "yu-jianghao/yu-jianghao.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -83,7 +83,7 @@ author:
   name             : "Dr. Jiang-Hao Yu"
   avatar           : "yuphoto.jpg"
   bio              : |
-    Associate Professor, <br>
+    Professor, <br>
     Institute of Theoretical Physics <br>
     Chinese Academy of Science
   location         : "Beijing, China"
