--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Jiang-Hao Yu"
-  avatar           : "jhyupicchicago.jpg"
+  avatar           : "jhyupicchicago-3.jpg"
   bio              : |
     Professor, <br>
     Institute of Theoretical Physics <br>
